table wrap fix

--- a/functions/views/jumbotron-narrow.css
+++ b/functions/views/jumbotron-narrow.css
@@ -89,3 +89,6 @@ table td {
 		border-bottom: 0;
 	}
 }
+.hello{
+	width: 100px;
+}
